--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,40 @@
     transform: rotate(360deg);
   }
 }
+
+main {
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+}
+
+.board {
+  width: 1000px;
+  display: flex;
+  flex-direction: column;
+}
+
+.row-one {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.row-two {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.row-three {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.square {
+  width: 100px;
+  height: 100px;
+  border: 1px solid red;
+  font-size: 30px;
+}
